bindings/colibri.h

typedef void prover_t;
typedef struct {
  uint32_t len;
  uint8_t* data;
} bytes_t;
prover_t* c4_create_prover_ctx(char* method, char* params, uint64_t chain_id, uint32_t flags);
char* c4_prover_execute_json_status(prover_t* ctx);
bytes_t c4_prover_get_proof(prover_t* ctx);
void c4_free_prover_ctx(prover_t* ctx);
void c4_req_set_response(void* req_ptr, bytes_t data, uint16_t node_index);
void c4_req_set_error(void* req_ptr, char* error, uint16_t node_index);
void* c4_verify_create_ctx(bytes_t proof, char* method, char* args, uint64_t chain_id, char* trusted_checkpoint, uint32_t flags);
char* c4_verify_execute_json_status(void* ctx);
void c4_verify_free_ctx(void* ctx);
int c4_get_method_support(uint64_t chain_id, char* method, char* params, uint32_t flags);
void* c4_create_rpc_ctx(char* method, char* params, uint64_t chain_id, uint32_t prover_flags, uint32_t verify_flags, int prover_mode);
void c4_set_checkpoint(uint64_t chain_id, const char* trusted_checkpoint);
void c4_rpc_set_witness_keys(void* ctx, const char* witness_keys);
char* c4_rpc_execute_json_status(void* ctx);
void c4_free_rpc_ctx(void* ctx);